# Spell-Checker-App

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
DSA PROJECT/: DSA PROJECT.opensdf  DSA PROJECT.sln  DSA PROJECT.vcxproj  DSA PROJECT.vcxproj.filters  Project Presentation.pptx  Project Report..docx  Project_Source_Code.cpp
DSA PROJECT/DSA PROJECT/Debug/DSA PROJECT.tlog/: CL.read.1.tlog  CL.write.1.tlog  DSA PROJECT.lastbuildstate  cl.command.1.tlog  link.command.1.tlog
DSA PROJECT/Debug/: DSA PROJECT.ilk  vc120.idb
DSA PROJECT/Debug/DSA PROJECT.tlog/: link.read.1.tlog  link.write.1.tlog
data/: high_scores.txt
src/: main.cpp
